--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,14 @@
 [metadata]
 description-file = README.md
+name = fetch-latest-file
+version = 0.0.10
+REQUIRES_PYTHON = >=3.6.0
+DESCRIPTION = Easy fetch a latest file.
+URL = https://github.com/marcwimmer/fetch-latest-file
+EMAIL = marc@itewimmer.de
+AUTHOR = Marc-Christian Wimmer
+license = MIT
+
+[options.entry_points]
+console_scripts =
+    fetch = fetch_latest_file:cli
