--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,19 @@
 [metadata]
-description-file = README.md
 name = fetch-latest-file
-version = 0.0.11
-REQUIRES_PYTHON = >=3.6.0
-DESCRIPTION = Easy fetch a latest file.
-URL = https://github.com/marcwimmer/fetch-latest-file
-EMAIL = marc@itewimmer.de
-AUTHOR = Marc-Christian Wimmer
+version = 0.1.3
+description = Easy fetch a latest file.
+url = https://github.com/marcwimmer/fetch-latest-file
+author = Marc-Christian Wimmer
+author_email = marc@itewimmer.de
 license = MIT
+description-file = README.md
+
+[options]
+python_requires = >=3.6.0
 
 [options.entry_points]
 console_scripts =
     fetch = fetch_latest_file:cli
+
+[bdist_wheel]
+universal = true
