--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-	"workbench.colorCustomizations": {}
+	"workbench.colorCustomizations": {},
+	"GitHooks.hooksDirectory": "/Users/marcwimmer/projects/fetch-latest-file/.git/hooks"
 }
